styles/global.css
*,
*::before,
*::after {
  scrollbar-color: var(--colorTextSecondary) transparent;
  accent-color: var(--colorAccent);
  scroll-behavior: smooth;
  scrollbar-width: thin;
}

html {
  background-color: var(--colorLayer0);
  color: var(--colorText);
}

html,
body {
  touch-action: none;
}

*:not(p) {
  font-weight: bold;
}

html,
input,
button,
textarea,
select,
option {
  font-family: 'Exo 2', sans-serif;
  font-size: 1rem;
  line-height: 1;
}

p, small {
  line-height: 1.5;
}

a:not([class]) {
  color: var(--colorText);
  text-decoration: none;
}

a:not([class]):hover {
  color: var(--colorTextPrimary);
  text-decoration: underline;
}

*::-webkit-scrollbar {
  width: var(--spaceS);
}

h1 {
  font-family: 'Silkscreen';
  font-size: var(--fontSizeXL);
  color: var(--colorTextPrimary);
  letter-spacing: -0.025em;
}

h2 {
  font-size: var(--fontSizeL);
  text-transform: uppercase;
  color: var(--colorTextSecondary);
}

.active {
  color: var(--colorAccent);
}

:disabled {
  opacity: 0.3;
  pointer-events: none;
}

button {
  appearance: none;
  margin: 0;
  padding: 0;
  border: none;
  background-color: transparent;
  color: var(--colorText);
}

input:is([type=text], [type=number], [type=date], [type=email], [type=password]),
select {
  font-weight: bold;
  appearance: none;
  border: none;
  height: var(--spaceXL);
  display: grid;
  align-items: center;
  padding: 0 var(--spaceS);
  background-color: var(--colorLayer0);
  color: var(--colorPrimary);
}

option {
  padding: var(--spaceXS) 0;
}

/**
  TODO: We should only pixelate specific <canvas> elements.
*/
canvas {
  image-rendering: pixelated;
}

.preview-canvas,
.preview canvas {
  width: 100%;
  height: 100%;
  background-image: url('@/assets/checkers.png');
}

.preview-canvas,
.vector-canvas {
  width: 100%;
  height: 100%;
}

@media (max-width: 768px) {
  html {
    font-size: 12px;
  }
}

@media (min-width: 769px) and (max-width: 1024px) {
  html {
    font-size: 14px;
  }
}

@media (max-width: 1024px) {
  :root {
    --widthSidebar: 16rem;
  }
}

/* Transitions */

.slide-enter-active {
  transition: all 200ms ease-out;
}

.slide-leave-active {
  transition: all 200ms ease-in;
}

.slide-enter-from,
.slide-leave-to {
  translate: 100%;
  opacity: 0;
}

